--- a/packages/ui/styles.css
+++ b/packages/ui/styles.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -10%, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.animate-fade-in-down {
+  animation-name: fadeInDown;
+  animation-duration: 300ms;
+}
